--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # Site settings
-baseurl = "https://mattdoamaral.com/"
+baseurl = "/"
 languageCode = "en-us"
 title = "Agency"
 theme = "hugo-agency-theme"
