--- a/config.toml
+++ b/config.toml
@@ -1,12 +1,12 @@
 # Site settings
 baseurl = "/"
 languageCode = "en-us"
-title = "Agency"
+title = "Matt Do Amaral"
 theme = "hugo-agency-theme"
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
 # Enter your tracking code to enable Google Analytics
-googleAnalytics = ""
+googleAnalytics = "UA-142402614-2"
 
 [params]
   # You can use Markdown syntax for urls [text](//url.to/source) or
@@ -19,7 +19,7 @@ googleAnalytics = ""
   # To provide some metadata for search engines feel free to add a few
   # information about you and your website.
   name = "Mathias Do Amaral"
-  description = "Your description"
+  description = "Bienvenido a mi cyber espacio"
   # email = "your@email.com"
 
   # Link custom assets relative to /static
@@ -47,14 +47,14 @@ googleAnalytics = ""
 
   # Navigation
   [params.navigation]
-    brand = "Mathias"
+    brand = "Matt Do Amaral"
     # Optional logo as brand stored in img/
     #logo = "logo.svg"
     services = "Servicios"
     portfolio = "Portfolio"
-    about = "About"
+    about = "Acerca de mi"
     team = "Team"
-    contact = "Contact"
+    contact = "Contacto"
 
     # Add custom links. Those can be pre- and postpended to the default menu above.
     # Use the weight attribute to order your custom links. Uncomment the example
@@ -67,32 +67,32 @@ googleAnalytics = ""
     #  weight = 10
 
     # postpended links
-    [[menu.postpend]]
-      url = "http://gohugo.io"
-      name = "External link"
-      weight = 10
+    #[[menu.postpend]]
+    #  url = "http://gohugo.io"
+    #  name = "External link"
+     # weight = 10
 
 
   # Hero section
   [params.hero]
     # To change the background image of the hero, replace 'header-bg.jpg' in
     # the 'static/img' folder.
-    title = "Bienvenido To Our Studio!"
-    subtitle = "It's nice to meet you"
-    buttonText = "Tell me more"
+    title = "Bienvenido a mi espacio!"
+    subtitle = "que gusto tenerte aqui"
+    buttonText = "Conocer mas"
 
 
   # Services section
   [params.services]
     enable = true
-    title = "Services"
-    subtitle = "Lorem ipsum dolor sit amet consectetur."
+    title = "Servicios"
+    subtitle = "Conoce como te puedo ayudar"
 
     [[params.services.row]]
 
     [[params.services.row.list]]
-      icon = "fa-shopping-cart"
-      title = "E-Commerce"
+      icon = "camera"
+      title = "Fotografia"
       description = "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit."
       url = "#"
 
