--- a/config.toml
+++ b/config.toml
@@ -91,7 +91,7 @@ googleAnalytics = "UA-142402614-2"
     [[params.services.row]]
 
     [[params.services.row.list]]
-      icon = "camera"
+      icon = "fa-camera"
       title = "Fotografia"
       description = "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit."
       url = "#"
