--- a/config.toml
+++ b/config.toml
@@ -272,7 +272,7 @@ She worked at Pied Piper for years until they went belly up."""
     #error = "Message could not be send. Please contact us at mail@example.com instead."
 
     [params.contact.captcha]
-      # sitekey = "6Lf336oUAAAAAMQ6O7YrtRs-n1q9JWLuCYwUVqFU"
+      # sitekey = ""
 
     # 'warning' defines error messages for invalid inputs
     [params.contact.form.name]
