--- a/config.toml
+++ b/config.toml
@@ -265,7 +265,7 @@ She worked at Pied Piper for years until they went belly up."""
     # add some custom JS script to finish the implementation.
     # postURL = "https://example.com/mailout/"
 
-    email = "arturocdb@gmail.com"
+    email = "info.matt.doamaral@gmail.com"
 
     # Success and error message overwrite for async contact form
     #thanks = "Thank you for awesomely contacting us."
