--- a/config.toml
+++ b/config.toml
@@ -245,7 +245,7 @@ She worked at Pied Piper for years until they went belly up."""
     title = "Contácto"
     subtitle  = "Recibido tu mensaje, haré lo posible por darte una pronta respuesta."
     buttonText = "Enviar Mensaje"
-    netlify = true
+    # netlify = true
 
     # Since this template is static, the contact form uses www.formspree.io as a
     # proxy. The form makes a POST request to their servers to send the actual
