--- a/config.toml
+++ b/config.toml
@@ -139,7 +139,7 @@ googleAnalytics = "UA-142402614-2"
       img = "1.jpg"
       date = "2012-2013"
       title = "Un inicio humilde..."
-      description = "Recibo mi primera cámara de parte de papá, una réflex para principiantes, para mí se veía como la mejor cámara que existía, este fue el inicio de un sueño, ya que empecé a descubrir el mundo maravilloso de la fotografía!"
+      description = "Recibo mi primera cámara de parte de mi papá, una réflex para principiantes, para mí se veía como la mejor cámara que existía, este fue el inicio de un sueño, ya que empecé a descubrir el mundo maravilloso de la fotografía!"
 
     [[params.about.events]]
       img = "2.jpg"
