--- a/config.toml
+++ b/config.toml
@@ -151,7 +151,7 @@ googleAnalytics = "UA-142402614-2"
       img = "3.jpg"
       date = "Diciembre 2016"
       title = "Oh, mis primeros contratos!"
-      description = "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!"
+      description = "Recibo la grata noticia de que mis servicios son requeridos, se ven los primeros resultados de las largas jornadas en Photoshop, cursos, tutoriales, talleres…, la constancia y disciplina muestran sus frutos…!"
 
     [[params.about.events]]
       img = "4.jpg"
