--- a/data/projects/2014-07-06-project-2.yaml
+++ b/data/projects/2014-07-06-project-2.yaml
@@ -1,10 +1,10 @@
 modalID: 2
-title: Torneo Dptal. De Tenis
-subtitle: Lorem ipsum dolor sit amet consectetur.
-date: 2014-07-06
+title: 1ra Experiencia Laboral
+subtitle: Zap Fashion
+date: 2015-12-06
 img: startup-framework.png
 preview: startup-framework-preview.png
-client: Torneo Dptal. De Tenis
+client: Zap Fashion
 clientLink: "#"
-category: Fotografía
-description: "[Startup Framework](//designmodo.com/startup/?u=787) is a website builder for professionals. Startup Framework contains components and complex blocks (PSD+HTML Bootstrap themes and templates) which can easily be integrated into almost any design. All of these components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions for your future projects. <br><br>You can preview Startup Framework [here](//designmodo.com/startup/?u=787)."
+category: Laboral
+description: Sólo unos meses después del proyecto de subir música a YouTube, y ya con ganas de hacer dinero busqué un empleo y trabajé por 1 mes en Zap Fashion, mi trabajo era sencillo pues prácticamente me pagaban por sacar a "Promocionar" una bicicleta eléctrica por San Miguel, sin embargo el sencillo hecho de estar ahí 8 horas, me hizo dar cuenta de que antes del trabajo no tenía dinero y tenía todo el tiempo del mundo, pero ahora a pesar de tener dinero no tenía tiempo ni para mi familia! En ese momento me di cuenta de que ser empleado y cumplir horarios no era lo mío, sin importar lo sencillo que fuera el trabajo.
