--- a/data/projects/2014-07-07-project-3.yaml
+++ b/data/projects/2014-07-07-project-3.yaml
@@ -1,10 +1,10 @@
 modalID: 3
-title: Hard Rock Café – La Paz
-subtitle: Lorem ipsum dolor sit amet consectetur.
-date: 2014-07-07
+title: Fotógrafo Freelance
+subtitle: DxTMagazine 
+date: 2017-02-07
 img: treehouse.png
 preview: treehouse-preview.png
-client: Hard Rock Café – La Paz 
+client: DxTMagazine 
 clientLink: "#"
 category: Fotografía
-description: Treehouse is a free PSD web template built by [Mathavan Jaya](//www.behance.net/MathavanJaya). This is bright and spacious design perfect for people or startup companies looking to showcase their apps or other projects. <br><br>You can download the PSD template in this portfolio sample item at [FreebiesXpress.com](freebiesxpress.com/gallery/treehouse-free-psd-web-template/).
+description: Ya con 17 años me gustaba la fotografía, pero tenía pocos conocimientos, un amigo mío me dijo que tenía talento y me contactó con el Gerente de Dxt quien me probó y me terminó contratando, este trabajo me gustaba más porque no cumplía horarios, sólo tenía que cubrir eventos y editar las imágenes, y la paga era buena aparte de que hacía algo que me gustaba! Pero ya estando 2 meses me encontraba muy agotado físicamente, no dormía bien, y me daba ansiedad por que tenía que entregar muy rápido las fotografías, a pesar de que no cumplía horarios era un trabajo muy pesado pues por evento mínimo sacaba 1000 fotografías y tenía que editarlas en 1 o 2 días, había viajes de improvisto muy cansadores que me desgastaban física y mentalmente, puse en prioridad mi salud y decidí abandonar la empresa.
