--- a/data/projects/2014-07-08-project-4.yaml
+++ b/data/projects/2014-07-08-project-4.yaml
@@ -1,10 +1,10 @@
 modalID: 4
-title: Festival Viva el Arte
-subtitle: Lorem ipsum dolor sit amet consectetur.
-date: 2014-07-08
+title: Nuevas personas, Nuevas oportunidades 
+subtitle: La Casa del Terror
+date: 2017-11-08
 img: golden.png
 preview: golden-preview.png
-client: Festival Viva el Arte
+client: La Casa del Terror
 clientLink: "#"
-category: Fotografía
-description: Start Bootstrap's Agency theme is based on Golden, a free PSD website template built by [Mathavan Jaya](//www.behance.net/MathavanJaya). Golden is a modern and clean one page web template that was made exclusively for Best PSD Freebies. This template has a great portfolio, timeline, and meet your team sections that can be easily modified to fit your needs. <br><br>You can download the PSD template in this portfolio sample item at [FreebiesXpress.com](//freebiesxpress.com/gallery/golden-free-one-page-web-template/).
+category: Desarrollo Personal
+description: Mi mejor amigo quiso que lo ayudara a filmar unas escenas para un Spot de una casa del terror que quería realizar, al principio no le tomé demasiada importancia, hasta que escuché con detalles el proyecto, me enamoré de la visión y decidí hacerla junto con él y con otra persona quien después se convertiría en uno de mis mentores, a pesar de que por factores externos a nosotros No pudimos realizar la casa del terror, el conocimiento que obtuve fue significativo y fue una puerta a tener muchas nuevas e increíbles amistades.
