--- a/data/projects/2014-07-09-project-5.yaml
+++ b/data/projects/2014-07-09-project-5.yaml
@@ -1,10 +1,10 @@
 modalID: 5
-title: Revista DXT
-subtitle: Lorem ipsum dolor sit amet consectetur.
-date: 2014-07-09
+title: FEVA
+subtitle: el primer gran proyecto.
+date: 2018-07-09
 img: escape.png
 preview: escape-preview.png
-client: Revista DXT
+client: FEVA
 clientLink: "#"
-category: Fotografía
-description: Escape is a free PSD web template built by [Mathavan Jaya](//www.behance.net/MathavanJaya). Escape is a one page web template that was designed with agencies in mind. This template is ideal for those looking for a simple one page solution to describe your business and offer your services. <br><br>You can download the PSD template in this portfolio sample item at [FreebiesXpress.com](//freebiesxpress.com/gallery/escape-one-page-psd-web-template/).
+category: Proyectos
+description: Gracias a aquella casa del terror fallida conocí Arte Bolivia, y a dos personas quienes también se convertirían meses después en mis mentores, en medio del desarrollo de éste festival, fue cuando por primera vez se me presentó el "Desarrollo personal" pues vi como las personas que estaban Más arriba en esta empresa eran completamente diferentes a los jefes que yo había tenido, de hecho, a las  personas de Arte Bolivia jamás las consideré mis jefes, sino líderes, quienes NO se ponen encima tuyo sino con quienes podía trabajar lado a lado apalancandonos del otro, personas cuya inteligencia emocional y social era muy avanzada y sabían resolver problemas de las maneras más eficientes, eficaces y creativas que te puedas imaginar, fue acá donde dije Quiero Saber Todo Sobre El Desarrollo Personal!!!
