--- a/data/projects/2014-07-10-project-6.yaml
+++ b/data/projects/2014-07-10-project-6.yaml
@@ -1,10 +1,10 @@
 modalID: 6
-title: Arte Bolivia
-subtitle: Lorem ipsum dolor sit amet consectetur.
-date: 2014-07-10
+title: Juegos Suramericanos ODESUR
+subtitle: Logistica
+date: 2018-07-10
 img: dreams.png
 preview: dreams-preview.png
-client: Arte Bolivia
+client: ODESUR
 clientLink: "#"
-category: Fotografía
-description: Dreams is a free PSD web template built by [Mathavan Jaya](//www.behance.net/MathavanJaya). Dreams is a modern one page web template designed for almost any purpose. It’s a beautiful template that’s designed with the Bootstrap framework in mind. <br><br>You can download the PSD template in this portfolio sample item at [FreebiesXpress.com](//freebiesxpress.com/gallery/dreams-free-one-page-web-template/).
+category: Laboral
+description: Éste fue uno de los viajes más fuertes que tuve, jamás pensé ser parte de la inauguración de un evento tan importante como lo fue éste, y así de importante que fue, también tuvo su precio y su esfuerzo, 4 días en los que casi no dejabas de caminar más que para comer, de día hacía un calor infernal que te obligaba a hidratarte todo el tiempo y por las noches ni hablar del frío, jamás había estado en un lugar tan frío y alejado de la civilización, recuerdo que trabajábamos hasta las 21Hrs. Cenábamos y dormíamos hasta las 2 a.m., a esa hora nos levantábamos todos a recoger mástiles, o a cargar algo, o a ver si el escenario estaba donde tenía que estar, en fin, había tanto que hacer que no quedaba tiempo para dormir más, la última noche antes de la inauguración fue el día con más trabajo y la noche que caminé más en toda mi vida,  Esa misma noche, después de llegar al punto de casi dormirte mientras caminas comprendí lo que es dar La Milla extra, entendí a qué se referían las personas exitosas cuando dicen que tienes que dar más si quieres tener más. Antes de esa noche pensaba que dar más y esforzarte más era fácil, sin embargo, en el momento de decidir si vas en serio o no, es un sentimiento completamente diferente, sientes miedo, incertidumbre, no sabes si estás haciendo lo correcto o no, pero algo que te puedo asegurar cuando estés en esa posición es que ¡Siempre Valdrá La Pena!
