--- a/data/projects/2014-07-05-project-1.yaml
+++ b/data/projects/2014-07-05-project-1.yaml
@@ -1,10 +1,10 @@
 modalID: 1
-title: Evento ciclismo
+title: Locutor en "xxxx"
 subtitle: Cobertura fotográfica del evento
-date: 2014-07-05
+date: 2015-07-05
 img: roundicons.png
 preview: roundicons-preview.png
-client: Evento ciclismo "Yolosa La Cumbre"
+client: Cliente "xxxx"
 clientLink: "#"
-category: Fotografía
-description: Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo! <br><br>**Want these icons in this portfolio item sample?** You can download 60 of them for free, courtesy of [RoundIcons.com](//getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc), or you can purchase the 1500 icon set [here](//getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc).
+category: Desarrollo Personal
+description: A Mediados de 2015 empecé a perder el miedo a hablar "en público" y a equivocarme al hacerlo, pues por una oportunidad que se me presentó de improvisto terminé haciendo la voz de un animal en un programa para niños que era en vivo cada sábado a las 9 a.m., fue también ahí donde empecé a sentir ganas de compartir a las personas lo que yo iba aprendiendo porque comprendí que lo que me sirve a mi puede servirle a 1 o a 1000 personas.
