--- a/config.toml
+++ b/config.toml
@@ -50,10 +50,10 @@ googleAnalytics = "UA-142402614-2"
     brand = "Matt Do Amaral"
     # Optional logo as brand stored in img/
     #logo = "logo.svg"
-    services = "Servicios"
+    services = "Ocupación"
     portfolio = "Proyectos"
     about = "Conóceme"
-    team = "Mi Team"
+    team = "Mentores"
     contact = "Contacto"
 
     # Add custom links. Those can be pre- and postpended to the default menu above.
@@ -85,7 +85,7 @@ googleAnalytics = "UA-142402614-2"
   # Services section
   [params.services]
     enable = true
-    title = "Servicios"
+    title = "Ocupación"
     subtitle = "Genero valor de manera asertiva en distintos tipos de relaciones, a través de conocimiento y actitud brindo soluciones y experiencias trabajando y aprendiendo de personas muy talentosas"
 
     [[params.services.row]]
@@ -94,19 +94,19 @@ googleAnalytics = "UA-142402614-2"
       icon = "fa-users"
       title = "Desarrollo Personal"
       description = "Diariamente desarrollo nuevas y mejores características para ser la mejor versión de mí mismo con el propósito de agregarle valor a las personas."
-      url = "#"
+      #url = "#"
 
     [[params.services.row.list]]
       icon = "fa-credit-card"
       title = "Educación Financiera"
       description = "Constantemente trabajo en el manejo de mis finanzas personales que me ayudan a un mejor control sobre mis ingresos y gastos. Buscando adquirir más activos y deshacerme de pasivos, para lograr así la libertad financiera."
-      url = "#"
+      #url = "#"
 
     [[params.services.row.list]]
       icon = "fa-camera"
       title = "Fotografía"
       description = "Una de mis pasiones, me ayuda a expandir mi mente y a tener nuevos puntos de vista, no sólo al momento de estar con mi cámara, sino en mi día a día y al tratar con diferentes personas."
-      url = "#"
+      #url = "#"
 
   # Portfolio section
   [params.portfolio]
@@ -129,7 +129,7 @@ googleAnalytics = "UA-142402614-2"
   [params.about]
     enable = true
     title = "Conóceme"
-    subtitle = "Hola, soy Mathias Do Amaral Argote, emprendedor, amante de la fotografía y candidato a licenciatura en “Creación y Desarrollo de Empresas” de la EPC en Universidad Católica Boliviana, mis aptitudes se centran en la fotografía y las finanzas, dos mundos totalmente distintos, sin embargo, para mí representan un plan de vida."
+    subtitle = "Hola, soy Mathias Do Amaral Argote, emprendedor, trader, apasionado de la fotografía, una de mis actividades favoritas es conocer personas y educarme constantemente en las áreas de Educación financiera, desarrollo personal y emocional."
     endpoint = "se parte<br>de mi<br>historia!"
 
     # The events will be listed from the top to the bottom.
@@ -137,27 +137,27 @@ googleAnalytics = "UA-142402614-2"
     # Replace them with your own.
     [[params.about.events]]
       img = "1.jpg"
-      date = "2012-2013"
-      title = "Un inicio humilde..."
-      description = "Recibo mi primera cámara de parte de mi papá, una réflex para principiantes, para mí se veía como la mejor cámara que existía, este fue el inicio de un sueño, ya que empecé a descubrir el mundo maravilloso de la fotografía!"
+      date = "2016"
+      title = "No seré uno más...."
+      description = "Empiezo mi curiosidad por Ir más allá, me llama la atención hacer música y subirla a youtube, descubro que me gusta aprender y compartir ese aprendizaje con los demás."
 
     [[params.about.events]]
       img = "2.jpg"
-      date = "Marzo 2014"
-      title = "Houston, tenemos un problema..."
-      description = "Después de semanas de intentar descifrar mi cámara… ISO, obturación, profundidad de campo, controles de apertura, sensores, velocidad de la cámara, what?, empiezo mis primeros cursos y talleres... y se hizo la luz..."
+      date = "2017"
+      title = "Mi Primer acercamiento"
+      description = "Este año con pocos conocimientos de fotografía entré a una de las mejores empresas de fotografia del país, DxT Magazine, en este punto de mi vida sólo descubrí que me gustaba relacionarme con las personas, hacer amigos nuevos y pasarla bien, aún estaba en colegio pero ya tenía una vida bastante complicada"
 
     [[params.about.events]]
       img = "3.jpg"
-      date = "Diciembre 2016"
-      title = "Oh, mis primeros contratos!"
-      description = "Recibo la grata noticia de que mis servicios son requeridos, se ven los primeros resultados de las largas jornadas en Photoshop, cursos, tutoriales, talleres…, la constancia y disciplina muestran sus frutos…!"
+      date = "2018"
+      title = "Tomo el control de mi vida"
+      description = "Ya estaba trabajando en mí mismo y mejorando mis relaciones interpersonales, experimenté una red de mercadeo, conocí a muchas personas increíbles y exitosas y decidí que quería ser Empresario."
 
     [[params.about.events]]
       img = "4.jpg"
-      date = "Julio 2018"
-      title = "Fase 2, Expansión"
-      description = "Busco un proyecto que me permita crecer profesionalmente, aportando lo mejor de mí para generar la mayor satisfacción a mis clientes, busco contactos de calidad con quienes poder realizar negocios, acostumbro a ser lo más suave con las personas, pero duro con los resultados, tengo mucha pasión por lo que hago, con actitud positiva y trabajo en equipo."
+      date = "2019"
+      title = "Empieza el juego en serio"
+      description = "Despierta mi pasión por leer pues creo que es la mejor manera de aprender de las mejores personas, fortalezco mi relación con mis mentores, decido cambiar mis hábitos y descubro que mi propósito de vida es Inspirar a Un millón de personas y ser un ejemplo de ser humano, me enfoco en trabajar más en mí y a descubrir Cómo mejorar la vida de las personas a mi alrededor, cambio radicalmente de forma positiva a mi círculo más cercano pues yo soy el resultado de éste."
 
 
   # Team section
@@ -165,51 +165,53 @@ googleAnalytics = "UA-142402614-2"
     enable = true
     # Possibility to center items
     #center = true
-    title = "¡Un Equipo increíble!"
-    subtitle = "Lorem ipsum dolor sit amet consectetur."
-    description = "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde."
+    title = "¡Conoce a mis Mentores!"
+    subtitle = "Un equipo increible!"
+    description = "Una relación entre un mentor y un discípulo puede durar años o puede darse durante una cita en una cafetería. Cuando eres el mentor de alguien durante un largo tiempo, en verdad llegas a conocer y entender su personalidad, estilo de aprendizaje y objetivos, lo cual puede hacer que le ofrezcas consejos más relevantes conforme pase el tiempo."
 
     # All team member's pictures are stored under 'static/img/team'.
     # Replace them with your own too.
     # Suggestion: Image size should be at least 360px*360px or the alignment might be affected.
     [[params.team.members]]
       img = "1.jpg"
-      name = "Kay Garland"
-      position = "Lead Designer"
-      reportsTo = "CTO"
-      livesIn = "[Munich, Germany](#some-maps-url)"
-      scope = [
-        "UX for [member dashboard](#)",
-        "Maintainer for [awesome-project](#)",
-        "Open Source [community management](#)"
-      ]
+      name = "Jaime Toledo"
+      position = "Abogado - Emprendedor"
+    # reportsTo = "CTO"
+      livesIn = "La Paz, Bolivia"
+    #  scope = [
+    #    "UX for [member dashboard](#)",
+    #    "Maintainer for [awesome-project](#)",
+    #    "Open Source [community management](#)"
+    #  ]
       # For bio markdown and even multiline strings are available.
       bio = """Kay is an awesome Lead Designer with heaps of experience in the field of UX.
 She worked at Pied Piper for years until they went belly up."""
       social = [
-        ["fa-twitter", "#"],
-        ["fa-facebook", "#"],
-        ["fa-linkedin", "#"]
+      #  ["fa-twitter", "#"],
+        ["fa-facebook", "https://www.facebook.com/Jimmy.toledo.bolivia/"],
+        ["fa-instagram", "https://www.instagram.com/jimmy.toledo_/"]
       ]
 
     [[params.team.members]]
       img = "2.jpg"
-      name = "Larry Parker"
-      position = "Lead Marketer"
+      name = "Alejandro Leyton"
+      position = "Productor Musical"
+      livesIn = "La Paz, Bolivia"
       social = [
-        ["fa-twitter", "#"],
-        ["fa-facebook", "#"],
-        ["fa-linkedin", "#"]
+        ["fa-linkedin", "https://www.linkedin.com/in/alejandro-leyton-204071179/"],
+        ["fa-facebook", "https://www.facebook.com/alejandro.leytonn/"],
+        ["fa-instagram", "https://www.instagram.com/alejandro.leyton_/"]
       ]
 
     [[params.team.members]]
       img = "3.jpg"
-      name = "Diana Pertersen"
-      position = "Lead Developer"
+      name = "Maya Portillo"
+      position = "Fotógrafa - Empresaria"
+      livesIn = "La Paz, Bolivia"
       social = [
-        ["fa-twitter", "#"],
-        ["fa-facebook", "#"],
-        ["fa-linkedin", "#"]
+      #  ["fa-twitter", "#"],
+        ["fa-facebook", "https://www.facebook.com/foto.maya.portillo/"],
+        ["fa-instagram", "https://www.instagram.com/maya.portillo/"]
       ]
 
   # Client section
