--- a/data/projects/2014-07-05-project-1.yaml
+++ b/data/projects/2014-07-05-project-1.yaml
@@ -1,10 +1,10 @@
 modalID: 1
-title: Locutor en "xxxx"
-subtitle: Cobertura fotográfica del evento
+title: Locutor en "Jesus y los niños"
+subtitle: Programa de Radio
 date: 2015-07-05
 img: roundicons.png
 preview: roundicons-preview.png
-client: Cliente "xxxx"
+client: Programa "Jesus y los niños"
 clientLink: "#"
 category: Desarrollo Personal
 description: A Mediados de 2015 empecé a perder el miedo a hablar "en público" y a equivocarme al hacerlo, pues por una oportunidad que se me presentó de improvisto terminé haciendo la voz de un animal en un programa para niños que era en vivo cada sábado a las 9 a.m., fue también ahí donde empecé a sentir ganas de compartir a las personas lo que yo iba aprendiendo porque comprendí que lo que me sirve a mi puede servirle a 1 o a 1000 personas.
