--- a/data/projects/2014-07-08-project-4.yaml
+++ b/data/projects/2014-07-08-project-4.yaml
@@ -1,10 +1,10 @@
 modalID: 4
-title: Nuevas personas, Nuevas oportunidades 
+title: Hysteria
 subtitle: La Casa del Terror
 date: 2017-11-08
 img: golden.png
 preview: golden-preview.png
-client: La Casa del Terror
+client: Hysteria
 clientLink: "#"
 category: Desarrollo Personal
 description: Mi mejor amigo quiso que lo ayudara a filmar unas escenas para un Spot de una casa del terror que quería realizar, al principio no le tomé demasiada importancia, hasta que escuché con detalles el proyecto, me enamoré de la visión y decidí hacerla junto con él y con otra persona quien después se convertiría en uno de mis mentores, a pesar de que por factores externos a nosotros No pudimos realizar la casa del terror, el conocimiento que obtuve fue significativo y fue una puerta a tener muchas nuevas e increíbles amistades.
