--- a/data/projects/2014-07-09-project-5.yaml
+++ b/data/projects/2014-07-09-project-5.yaml
@@ -1,10 +1,10 @@
 modalID: 5
 title: FEVA
-subtitle: el primer gran proyecto.
+subtitle: Arte Bolivia
 date: 2018-07-09
 img: escape.png
 preview: escape-preview.png
-client: FEVA
+client: FEVA - Arte Bolivia
 clientLink: "#"
 category: Proyectos
 description: Gracias a aquella casa del terror fallida conocí Arte Bolivia, y a dos personas quienes también se convertirían meses después en mis mentores, en medio del desarrollo de éste festival, fue cuando por primera vez se me presentó el "Desarrollo personal" pues vi como las personas que estaban Más arriba en esta empresa eran completamente diferentes a los jefes que yo había tenido, de hecho, a las  personas de Arte Bolivia jamás las consideré mis jefes, sino líderes, quienes NO se ponen encima tuyo sino con quienes podía trabajar lado a lado apalancandonos del otro, personas cuya inteligencia emocional y social era muy avanzada y sabían resolver problemas de las maneras más eficientes, eficaces y creativas que te puedas imaginar, fue acá donde dije Quiero Saber Todo Sobre El Desarrollo Personal!!!
