--- a/data/projects/2014-07-05-project-1.yaml
+++ b/data/projects/2014-07-05-project-1.yaml
@@ -2,8 +2,8 @@ modalID: 1
 title: Locutor en "Jesus y los niños"
 subtitle: Programa de Radio
 date: 2015-07-05
-img: roundicons.png
-preview: roundicons-preview.png
+img: roundicons.jpg
+preview: roundicons-preview.jpg
 client: Programa "Jesus y los niños"
 clientLink: "#"
 category: Desarrollo Personal
