--- a/data/projects/2014-07-06-project-2.yaml
+++ b/data/projects/2014-07-06-project-2.yaml
@@ -2,8 +2,8 @@ modalID: 2
 title: 1ra Experiencia Laboral
 subtitle: Zap Fashion
 date: 2015-12-06
-img: startup-framework.png
-preview: startup-framework-preview.png
+img: zap_logo.jpg
+preview: zap_logo-preview.jpg
 client: Zap Fashion
 clientLink: "#"
 category: Laboral
