--- a/data/projects/2014-07-07-project-3.yaml
+++ b/data/projects/2014-07-07-project-3.yaml
@@ -2,8 +2,8 @@ modalID: 3
 title: Fotógrafo Freelance
 subtitle: DxTMagazine 
 date: 2017-02-07
-img: treehouse.png
-preview: treehouse-preview.png
+img: 3.jpg
+preview: 3-preview.jpg
 client: DxTMagazine 
 clientLink: "#"
 category: Fotografía
