--- a/data/projects/2014-07-09-project-5.yaml
+++ b/data/projects/2014-07-09-project-5.yaml
@@ -2,8 +2,8 @@ modalID: 5
 title: FEVA
 subtitle: Arte Bolivia
 date: 2018-07-09
-img: escape.png
-preview: escape-preview.png
+img: feva.jpg
+preview: feva-preview.jpg
 client: FEVA - Arte Bolivia
 clientLink: "#"
 category: Proyectos
