--- a/data/projects/2014-07-10-project-6.yaml
+++ b/data/projects/2014-07-10-project-6.yaml
@@ -2,8 +2,8 @@ modalID: 6
 title: Juegos Suramericanos ODESUR
 subtitle: Arte Bolivia
 date: 2018-07-10
-img: dreams.png
-preview: dreams-preview.png
+img: 6.jpg
+preview: 6-preview.jpg
 client: Arte Bolivia
 clientLink: "#"
 category: Laboral
